# slam-final-project

./: README.md
competition/competition/: CMakeLists.txt  README.md
competition/competition/.devcontainer/: Dockerfile
competition/competition/src/: competition.cpp
competition/visual-odometry/: CMakeLists.txt
competition/visual-odometry/.devcontainer/: Dockerfile
competition/visual-odometry/src/: vo_epipolar.cpp
lidar/: Dockerfile  README.md  aft_mapped_to_init.kitti  aft_mapped_to_init.tum  alignment_transformation_sim3.npy  ape.json  distances.npy  distances_from_start.npy  error_array.npy  info.json  output.bag  rpe.json  run.sh  seconds_from_start.npy  sequence_00_GT.tum  sequence_00_GT.txt  stats.json  timestamps.npy
mono/: Dockerfile  f_partAOut.txt  kf_partAOut.txt
mono-slam-competition/visual-odometry/.devcontainer/: Dockerfile  devcontainer.json
mono-slam-competition/visual-odometry/src/: vo_epipolar_noviz.cpp
